@@ -41,83 +41,30 @@
 
 /*
 This file is from Qt4.5.2:
-http://qt.nokia.com/doc/4.5/help-simpletextviewer-assistant-cpp.html
+http://qt.nokia.com/doc/4.5/help-simpletextviewer-assistant-h.html
 
 Qtstalker changes are minor configuration and are noted below, and also in the
 project's revision control system.
-CVS $Revision: 1.5 $ $Date: 2010/09/24 23:25:51 $
+CVS $Revision: 1.1 $ $Date: 2010/11/07 23:25:04 $
 */
 
-#include <QtCore/QByteArray>
-#include <QtCore/QDir>
-#include <QtCore/QLibraryInfo>
-#include <QtCore/QProcess>
-#include <QDebug>
+#ifndef DOC_HPP
+#define DOC_HPP
 
-#include "assistant.h"
-#include "../lib/qtstalker_defines.h"
-#include "Globals.h"
+#include <QString>
+#include <QProcess>
 
-Assistant::Assistant() : proc(0)
+class Doc
 {
-}
-
-Assistant::~Assistant()
-{
-  if (proc && proc->state() == QProcess::Running)
-  {
-    proc->terminate();
-    proc->waitForFinished(3000);
-  }
+  public:
+    Doc ();
+    ~Doc ();
+    void showDocumentation(QString file);
     
-  delete proc;
-}
-
-void Assistant::showDocumentation(const QString &page)
-{
-  if (!startAssistant())
-    return;
-
-  QByteArray ba("SetSource ");
-//  ba.append("qthelp://com.trolltech.examples.simpletextviewer/doc/");
-  ba.append("qthelp://qtstalker/doc/");
+  private:
+    bool startAssistant();
     
-  proc->write(ba + page.toLocal8Bit() + '\0');
-}
+    QProcess *_proc;
+};
 
-bool Assistant::startAssistant()
-{
-  if (!proc)
-    proc = new QProcess();
-
-  if (proc->state() != QProcess::Running)
-  {
-    QString app = QLibraryInfo::location(QLibraryInfo::BinariesPath) + QDir::separator();
-#if !defined(Q_OS_MAC)
-    app += QLatin1String("assistant");
-#else
-    app += QLatin1String("Assistant.app/Contents/MacOS/Assistant");
 #endif
-
-    QStringList args;
-/*
-   args << QLatin1String("-collectionFile")
-        << QLibraryInfo::location(QLibraryInfo::ExamplesPath)
-        + QLatin1String("/help/simpletextviewer/documentation/simpletextviewer.qhc")
-        << QLatin1String("-enableRemoteControl");
-*/
-    QString collectionFile = QString("%1/qtstalker/html/doc.qhc").arg(INSTALL_DOCS_DIR);
-    
-    args << QLatin1String("-collectionFile") << collectionFile << QLatin1String("-enableRemoteControl");
-
-    proc->start(app, args);
-
-    if (! proc->waitForStarted())
-    {
-      qDebug() << QObject::tr("Unable to launch Qt Assistant (%1)").arg(app);
-      return false;
-    }    
-  }
-  
-  return true;
-}
