@@ -44,6 +44,7 @@ HEADERS += DataBase.h
 HEADERS += DateRange.h
 HEADERS += DateScaleDraw.h
 HEADERS += Dialog.h
+HEADERS += Doc.h
 HEADERS += ExchangeDataBase.h
 HEADERS += ExchangeSearchDialog.h
 HEADERS += ExScript.h
@@ -129,6 +130,7 @@ SOURCES += DataBase.cpp
 SOURCES += DateRange.cpp
 SOURCES += DateScaleDraw.cpp
 SOURCES += Dialog.cpp
+SOURCES += Doc.cpp
 SOURCES += ExchangeDataBase.cpp
 SOURCES += ExchangeSearchDialog.cpp
 SOURCES += ExScript.cpp
